# rapidfem

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  build.rs
crates/rapidfem-core/: Cargo.toml
crates/rapidfem-core/src/: constants.rs  lib.rs  materials.rs  mesh.rs  mesh_io.rs  port_eigen.rs  quadrature.rs  quality.rs  topology.rs
crates/rapidfem-core/tests/: debye_golden_test.rs  material_tensor_golden_test.rs  port_eigen_cutoff_test.rs
crates/rapidfem-geom/: Cargo.toml
crates/rapidfem-geom/src/: lib.rs
crates/rapidfem-mesher/: Cargo.toml
crates/rapidfem-mesher/src/: lib.rs  mesher.rs  output.rs  spec.rs
crates/rapidfem-mesher/tests/: smoke.rs
crates/rapidfem-td/: Cargo.toml
crates/rapidfem-td/examples/: allocaudit.rs  bench.rs  gpu_bench.rs  ortho_bench.rs  precision.rs
crates/rapidfem-td/src/: absorber.rs  constants.rs  dg_basis.rs  dispersive.rs  explicit.rs  explicit_adaptive.rs  geom_factors.rs  lib.rs  macromodel.rs  mesh_gen.rs  mor.rs  port_eigen.rs  propagator.rs  rhs.rs  waveguide.rs
crates/rapidfem-td/src/gpu/: apply.cl  expmv.cl  kcl.cl  lserk.cl  mod.rs  operator.rs
crates/rapidfem-td/tests/: dg_basis_golden_test.rs  lserk4_convergence_test.rs  propagator_expm_test.rs  rhs_curl_golden_test.rs
python/: Cargo.toml  README.md  debug_substrate_tag.py  pyproject.toml  spike_geometry.py
python/examples/: builder_patch_antenna.py  builder_wr90.py  geometry_fragment.py  geometry_wr90.py  patch_antenna.py  rfic_gds_sky130.py  rfic_inductance_validation.py  rfic_microstrip.py  rfic_spiral_validation.py  rfic_wire_min.py  td_benchmark.py  td_gmres_micro.py  td_gpu_geometry_bench.py  td_lumped_port_diag.py  td_macromodel_bench.py  td_macromodel_smoke.py  td_microstrip_macromodel.py  td_microstrip_transient_sparams.py  td_two_lumped_box.py  td_two_lumped_box_trace.py  wr90.py
python/python_src/rapidfem/: __init__.py  _cli.py  _fmt.py  _geometry_gds.py  _geometry_import.py  _geometry_primitives.py  _show_capture.py  bridge.py  builder.py  excitation.py  geometry.py  io.py  materials.py  physics.py  problem.py  rfic.py  structures.py
python/python_src/rapidfem/examples/: __init__.py  coax_step.py  dielectric_resonator.py  fd_coax_step.py  fd_coupled_line_filter.py  fd_dielectric_resonator.py  fd_inverted_f_antenna.py  fd_iris_filter.py  fd_microstrip_line.py  fd_patch_antenna.bake.json  fd_patch_antenna.py  fd_pyramidal_horn.py  fd_rfic_ratrace_coupler_from_json.py  fd_rfic_spiral_from_json.fem.json  fd_rfic_spiral_from_json.py  fd_rfic_stacked_transformer_from_json.py  fd_rfic_symmetric_inductor_from_json.py  fd_rfic_symmetric_transformer_from_json.py  fd_step_import.py  fd_stepped_impedance_filter.py  fd_vivaldi_antenna.py  fd_wr90.py  fd_wr90_pml.py  inverted_f_antenna.py  iris_filter.py  microstrip_line.py  patch_antenna.py  pyramidal_horn.py  rfic_ratrace_coupler_from_json.fem.json  rfic_ratrace_coupler_from_json.py  rfic_spiral_from_json.py  rfic_spiral_inductor.py  rfic_stacked_transformer_from_json.fem.json  rfic_stacked_transformer_from_json.py  rfic_symmetric_inductor_from_json.fem.json  rfic_symmetric_inductor_from_json.py  rfic_symmetric_transformer_from_json.fem.json  rfic_symmetric_transformer_from_json.py  stepped_impedance_filter.py  td_cavity.py  (+17 more)
python/python_src/rapidfem/problem/: __init__.py  fd.py  td.py
python/python_src/rapidfem/ui/: __init__.py  api.py  binpack.py  bus.py  kernel.py  kernel_ws.py  runner.py  serialize.py  server.py  worker.py
python/python_src/rapidfem/ui/frontend/: __init__.py
python/python_src/rapidfem/ui/frontend-src/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vite.embed.config.ts
python/python_src/rapidfem/ui/frontend-src/src/: app.css  app.d.ts  app.html
python/python_src/rapidfem/ui/frontend-src/src/lib/: api.ts  (+10 more)
python/python_src/rapidfem/ui/frontend-src/static/: CNAME
python/src/: lib.rs
python/tests/: README.md  conftest.py  test_geometry_ops.py  test_import.py  test_metals_validation.py  test_renormalization.py  test_structures.py  test_td.py  test_td_api_coverage.py  test_td_iris_filter.py  test_td_patch_antenna.py  test_td_ports.py  test_td_rfic_spiral.py  test_td_verification.py  test_ui_incremental_display.py
python/tests/geometries/: __init__.py  test_abc_reflection.py  test_circular_waveguide_cutoff.py  test_coax_tem.py  test_cpw_impedance.py  test_dielectric_filled_guide.py  test_dielectric_resonator.py  test_drude_metal.py  test_energy_conservation.py  test_iris_filter.py  test_lossy_dielectric_attenuation.py  test_lumped_element_load.py  test_lumped_port_rlc.py  test_microstrip_neff.py  test_patch_antenna_farfield.py  test_pml_absorption.py  test_proximity_effect.py  test_rect_cavity_modes.py  test_scale_invariance.py  test_skin_effect_wall_loss.py  test_stripline_impedance.py  test_te10_mode_profile.py  test_volume_conductor_skin_depth.py  test_waveguide_evanescence.py  test_wr90_waveguide.py
python/tests/harness/: __init__.py  case.py  references.py
wasm-demo/: Cargo.toml  README.md
wasm-demo/app/: package-lock.json  package.json  sync-assets.sh  test_parse.ts  vite.config.ts
wasm-demo/app/examples/: spec_microstrip.json
wasm-demo/app/src/lib/: examples.ts  msh.ts  solver.worker.ts  sparams.ts  wasm.ts
wasm-demo/app/src/lib/bridge/: mesh_spec.ts  rp_to_spec.ts
wasm-demo/app/src/lib/components/: MeshViewer.svelte  ResultsPanel.svelte  Select.svelte  StatusPanel.svelte
wasm-demo/app/src/lib/render/: canvas3d.ts
wasm-demo/app/src/routes/: +layout.ts  +page.svelte
wasm-demo/app/static/examples/: microstrip.msh  microstrip.toml  rp_spiral.msh  rp_symmetric.msh  rp_symmetric.toml  spec_microstrip.msh  spec_microstrip.toml  spiral.msh
wasm-demo/app/static/pkg/: package.json  rapidfem_wasm.d.ts  rapidfem_wasm.js  rapidfem_wasm_bg.wasm  rapidfem_wasm_bg.wasm.d.ts
wasm-demo/scripts/: dump_microstrip.py  dump_rp_designs.py  dump_spiral.py  probe_rp_spiral.py  probe_via.py
wasm-demo/src/: lib.rs
wasm-demo/tests/: spec_solve.rs
wasm-demo/web/: index.html  microstrip.msh  microstrip.toml  spiral.msh  spiral.toml
(+361 files in other folders)
