[package]
name = "rapidfem-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rapidfem = { path = "..", default-features = false }
rapidfem-mesher = { path = "../crates/rapidfem-mesher" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
