[package]
name = "rapidfem-geom"
version = "0.1.0"
edition = "2024"

description = "3D geometry kernel for rapidfem — wraps csgrs to provide tagged Boolean solids that the rapidfem-mesher consumes."

[dependencies]
# Pure-Rust CSG kernel. Pin to git main: 0.20.1 on crates.io transitively
# pulls a yanked core2 0.4.0 and won't resolve. main (already at 0.21.0
# pre-release) dropped core2 entirely.
csgrs = { git = "https://github.com/timschmidt/csgrs", default-features = false, features = ["f64", "delaunay"] }
serde = { version = "1.0", features = ["derive"] }
