[package]
name = "rapidfem-mesher"
version = "0.1.0"
edition = "2024"

description = "2.5D tet mesher: takes a layered MeshSpec (dielectric slabs + conductor polygons + ports) and produces a tagged tetrahedral mesh. Pure Rust, WASM-bound."

[dependencies]
spade = "2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
