[package]
name = "rapidfem-td"
version = "0.1.0"
edition = "2024"

# Time-domain DGTD solver. See docs/td-backend-plan.md.

[lib]
# Doc comments carry explanatory math, not runnable examples.
doctest = false

[dependencies]
opencl3 = { version = "0.12.3", optional = true }
rapidfem-core = { path = "../rapidfem-core" }
rayon = "1.11.0"

[dev-dependencies]
# Dense eigensolver — used only by the cavity-mode validation gate.
faer = "0.24"

[features]
# Optional OpenCL GPU backend. Off by default; the CPU path is unaffected.
# OpenCL is loaded at runtime via the ICD loader, so this adds no build-time
# toolkit dependency.
gpu = ["dep:opencl3"]
